--- a/css/style.css
+++ b/css/style.css
@@ -1024,7 +1024,62 @@ nav a:hover{text-decoration: none; color: rgb(213, 231, 213);}
     color: rgb(206, 206, 206);
     font-weight: 700;
 }
+/* price tag */
 
+.container2{
+    width: 100%;
+    margin: auto;
+    overflow: hidden;
+    margin-top: 0px;
+}
+
+.container2 ul{
+    padding: 0px;
+    margin: 0px;
+}
+
+
+.container2 ul li{
+    float:left;
+    list-style: none;
+    width:22%;
+    height:200px;
+    margin :20px 0px 20px 110px; 
+    box-sizing: border-box;
+    box-shadow: 0px 0px 10px 2px grey;
+    background-image: url(../images/new.jpg);
+    background-position: right;
+    background-size: cover;
+
+}
+.container2 ul li:hover{
+    opacity: 0.8;
+}
+.container2 .bottom{
+    position: absolute;
+    padding: 80px 0px 0px 15px;
+    font-size: 40px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    stroke: black;
+    text-shadow: 2px 2px 2px black;
+    color: white;
+}
+
+
+@media screen and (max-width:1250px){
+    .container2 ul li{
+        width:75%;
+        margin-left: 40px;
+         
+    }
+    .container2 .bottom{
+        padding: 40px 60px 50px 65px;
+    }
+    .container2 ul li{
+        height: 150px;
+    }
+}
 /* categories */
 
 .categories {
@@ -1998,6 +2053,101 @@ nav a:hover{text-decoration: none; color: rgb(213, 231, 213);}
 
 /* //footer */
 
+/* cotent css */
+
+.content_container {
+    position: relative;
+    background: linear-gradient(90deg, rgba(238, 174, 202, 1) 0%, rgba(148, 187, 233, 1) 100%);
+    z-index: 1;
+}
+
+.content_container::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    background-color: black;
+    opacity: 0.4;
+    z-index: -1;
+}
+
+.about {
+    position: relative;
+    top: 50px;
+    max-width: 80%;
+    height: 200px;
+    background-image: url(../images/teracotta.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin: 60px auto 0 auto;
+}
+
+.text {
+    font-size: 30px;
+    color: #fff;
+    font-family: sans-serif;
+    text-shadow: 0px 15px 12px #000;
+    max-width: 60%;
+}
+
+.line {
+    width: 100%px;
+    height: 8px;
+    background-color: #5fb709;
+    display: block;
+    position: relative;
+    border-radius: 5px;
+    box-shadow: 0px 15px 12px 0px #000000;
+}
+
+.content {
+    max-width: 95%;
+    height: auto;
+    padding: 70px 0;
+    margin: 0 auto;
+    font-family: audiowide;
+    color: #333;
+    line-height: 20px;
+    text-align: center;
+}
+
+.content .content_header {
+    margin-bottom: 20px;
+    color: #dbdbdb;
+}
+
+.content .green_text {
+    font-size: 18px;
+    font-weight: 600;
+    color: #5fb709;
+}
+
+.content p {
+    margin-top: 15px;
+    font-size: 17px;
+    line-height: 22px;
+    color: #e3e3e3;
+    text-align: start;
+}
+.content ul{
+    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.content ul li{
+    max-width: 90%;
+    color: #e3e3e3;
+    list-style: disc;
+}
+
 /* Mobile view */
 
 @media only screen and (min-width:320px) and (max-width: 480px) {
@@ -2528,6 +2678,11 @@ nav a:hover{text-decoration: none; color: rgb(213, 231, 213);}
     }
     .containernxt .box .content p {
         font-size: 12px;
+    }
+    /* price tag */
+    .container2{
+        position: relative;
+        top: 130px;
     }
     .shop {
         top: 130px;
